--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -130,7 +130,7 @@
             </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
-                <artifactId>powermock-api-mockito</artifactId>
+                <artifactId>powermock-api-mockito2</artifactId>
                 <version>${powermock.version}</version>
             </dependency>
             <dependency>
