--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -35,7 +35,7 @@
     </modules>
 
     <properties>
-        <digidoc4j.version>4.0.0-RC.1</digidoc4j.version>
+        <digidoc4j.version>4.0.0</digidoc4j.version>
     </properties>
 
     <dependencyManagement>
