--- a/validation-services-parent/xroad-validation-service/src/main/resources/application.yml
+++ b/validation-services-parent/xroad-validation-service/src/main/resources/application.yml
@@ -2,13 +2,14 @@ server:
   port: 8081
 
 management:
-  context-path: /monitoring
-  security:
-    enabled: false
   health:
     diskspace:
       enabled: false
-
-endpoints:
-  enabled: false
-  sensitive: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+      base-path: /monitoring
+  endpoint:
+    health:
+      show-details: "ALWAYS"
