--- a/siva-parent/siva-webapp/src/main/resources/application.yml
+++ b/siva-parent/siva-webapp/src/main/resources/application.yml
@@ -7,15 +7,16 @@ siva:
   proxy:
     xroadUrl: http://localhost:8081
 management:
-  context-path: /monitoring
-  security:
-    enabled: false
   health:
     diskspace:
       enabled: false
-
-endpoints:
-  enabled: false
-  sensitive: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+      base-path: /monitoring
+  endpoint:
+    health:
+      show-details: "ALWAYS"
 
 
