--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,19 @@ jdk:
 - openjdk11
 before_install:
 - export TZ=Europe/Helsinki
-branches:
-  only:
-  - develop
-  - master
+# branches:
+#   only:
+#   - develop
+#   - master
 install: true
 script: ./mvnw clean install -P\!dependency-check -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 after_success:
 - "./mvnw jacoco:report coveralls:report -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN"
-notifications:
-  email:
-    recipients:
-    - aare.nurm@nortal.com
-    - siim.suu@nortal.com
-    - risto.seene@nortal.com
-    on_success: change
-    on_failure: always
+# notifications:
+#   email:
+#     recipients:
+#     - aare.nurm@nortal.com
+#     - siim.suu@nortal.com
+#     - risto.seene@nortal.com
+#     on_success: change
+#     on_failure: always
