--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,10 @@
         <bouncycastle.version>1.62</bouncycastle.version>
         <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
         <powermock.version>2.0.4</powermock.version>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.jacoco.reportPath>${project.basedir}/../../target/jacoco.exec</sonar.jacoco.reportPath>
+        <sonar.language>java</sonar.language>
     </properties>
 
     <reporting>
