SIVA-224 add parsing of time assertion message imprint

--- a/validation-services-parent/generic-validation-service/pom.xml
+++ b/validation-services-parent/generic-validation-service/pom.xml
@@ -104,6 +104,12 @@
             <groupId>org.digidoc4j.dss</groupId>
             <artifactId>dss-crl-parser-x509crl</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.digidoc4j.dss</groupId>
+            <artifactId>dss-asic-xades</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
