--- a/validation-services-parent/timemark-container-validation-service/src/main/resources/siva-digidoc4j-test.yaml
+++ b/validation-services-parent/timemark-container-validation-service/src/main/resources/siva-digidoc4j-test.yaml
@@ -72,13 +72,14 @@ DIGIDOC_CAS:
         - jar://certs/EID-SK 2011.crt
         - jar://certs/KLASS3-SK 2010.crt
         - jar://certs/KLASS3-SK 2010 EECCRCA.crt
-        - jar://certs/TEST-SK.crt
-        - jar://certs/TEST EECCRCA.crt
-        - jar://certs/TEST ESTEID-SK 2011.crt
-        - jar://certs/TEST ESTEID-SK 2015.crt
-        - jar://certs/TEST EID-SK 2011.crt
-        - jar://certs/TEST KLASS3 2010.crt
-        - jar://certs/TEST Juur-SK.crt
+        - jar://test-certs/TEST-SK.crt
+        - jar://test-certs/TEST EECCRCA.crt
+        - jar://test-certs/TEST ESTEID-SK 2011.crt
+        - jar://test-certs/TEST ESTEID-SK 2015.crt
+        - jar://test-certs/TEST EID-SK 2011.crt
+        - jar://test-certs/TEST KLASS3 2010.crt
+        - jar://test-certs/TEST Juur-SK.crt
+        - jar://test-certs/TEST_of_KLASS3-SK_2016.crt
       OCSPS:
         - OCSP:
           CA_CN: ESTEID-SK
@@ -182,37 +183,24 @@ DIGIDOC_CAS:
           URL: http://ocsp.sk.ee
         - OCSP:
           CERTS:
-            - jar://certs/TEST-SK OCSP 2005.crt
-          CN: TEST-SK OCSP RESPONDER 2005
-          CA_CERT: jar://certs/TEST-SK.crt
-          CA_CN: TEST-SK
-          URL: http://demo.sk.ee/ocsp
-        - OCSP:
-          CERTS:
-            - jar://certs/TEST SK OCSP 2011.crt
-          CN: TEST of SK OCSP RESPONDER 2011
-          CA_CERT: jar://certs/TEST EECCRCA.crt
-          CA_CN: TEST of EE Certification Centre Root CA
-          URL: http://demo.sk.ee/ocsp
-        - OCSP:
-          CA_CN: TEST of ESTEID-SK 2011
-          CA_CERT: jar://certs/TEST ESTEID-SK 2011.crt
-          CN: TEST of SK OCSP RESPONDER 2011
-          CERTS:
-            - jar://certs/TEST SK OCSP 2011.crt
-          URL: http://demo.sk.ee/ocsp
-        - OCSP:
-          CERTS:
-            - jar://certs/TEST SK OCSP 2011.crt
-          CN: TEST of SK OCSP RESPONDER 2011
-          CA_CERT: jar://certs/KLASS3-SK 2010.crt
-          CA_CN: KLASS3-SK 2010
-          URL: http://demo.sk.ee/ocsp
-        - OCSP:
-          CERTS:
             - jar://certs/SK_proxy_OCSP_responder_2009.pem.cer
           CA_CN: KLASS3-SK
           CA_CERT: jar://certs/KLASS3-SK.crt
           CN: SK Proxy OCSP Responder 2009
           URL: http://ocsp.sk.ee
+        - OCSP:
+          CERTS:
+            - jar://test-certs/TEST-SK OCSP 2005.crt
+          CN: TEST-SK OCSP RESPONDER 2005
+          CA_CERT: jar://test-certs/TEST-SK.crt
+          CA_CN: TEST-SK
+          URL: http://demo.sk.ee/ocsp
+        - OCSP:
+          CERTS:
+            - jar://test-certs/TEST SK OCSP 2011.crt
+          CN: TEST of SK OCSP RESPONDER 2011
+          CA_CERT: jar://test-certs/TEST EECCRCA.crt
+          CA_CN: TEST of EE Certification Centre Root CA
+          URL: http://demo.sk.ee/ocsp
+
 
