SIVA-221 update of documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
 - 4. INTERFACES: siva3/interfaces.md
 - 5. DEPLOYMENT:
       - 5.1 Deployment model: siva3/deployment.md
-      - 5.2 System integrator's guide: siva3/systemintegrators_guide.md
+      - 5.2 Deployment guide: siva3/deployment_guide.md
 - 6. QUALITY ASSURANCE: 
       - 6.1 QA Strategy: siva3/qa_strategy.md
       - 6.2 Test Plan: siva3/test_plan.md
