--- a/validation-services-parent/timestamptoken-validation-service/pom.xml
+++ b/validation-services-parent/timestamptoken-validation-service/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.digidoc4j</groupId>
             <artifactId>digidoc4j</artifactId>
-            <version>4.0.1</version>
+            <version>${digidoc4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
