--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -168,12 +168,18 @@
             <dependency>
                 <groupId>de.neuland-bfi</groupId>
                 <artifactId>spring-jade4j</artifactId>
-                <version>1.2.7</version>
+                <version>1.3.1</version>
             </dependency>
             <dependency>
                 <groupId>de.neuland-bfi</groupId>
                 <artifactId>jade4j</artifactId>
-                <version>1.2.7</version>
+                <version>1.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>1.27</version>
+                <scope>test</scope>
             </dependency>
 
             <!-- Webjars -->
