--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -99,6 +99,12 @@
                 <artifactId>jackson-annotations</artifactId>
                 <version>2.12.0</version>
             </dependency>
+            <!-- Override vulnerable version-->
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>1.27</version>
+            </dependency>
             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
