--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -40,7 +40,7 @@
 
     <properties>
         <cxf.version>3.4.1</cxf.version>
-        <junit.version>4.13.1</junit.version>
+        <junit.jupiter.version>5.7.0</junit.jupiter.version>
         <mockito.version>2.23.4</mockito.version>
     </properties>
 
@@ -294,9 +294,9 @@
 
             <!-- Test dependencies -->
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.jupiter.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
