--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -128,7 +128,12 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.16</version>
             </dependency>
-
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
                 <artifactId>powermock-module-junit4</artifactId>
