--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
         <bouncycastle.version>1.65</bouncycastle.version>
         <spring.boot.version>2.2.12.RELEASE</spring.boot.version>
         <junit.version>4.13.1</junit.version>
+        <junit.jupiter.version>5.7.0</junit.jupiter.version>
         <powermock.version>2.0.4</powermock.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
