--- a/validation-services-parent/timemark-container-validation-service/pom.xml
+++ b/validation-services-parent/timemark-container-validation-service/pom.xml
@@ -87,6 +87,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
             <scope>test</scope>
