SIVA-269 Custom heartbeat endpoint

--- a/siva-parent/siva-monitoring/pom.xml
+++ b/siva-parent/siva-monitoring/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>jcabi-manifests</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
