--- a/siva-parent/siva-webapp/src/main/resources/application.yml
+++ b/siva-parent/siva-webapp/src/main/resources/application.yml
@@ -13,10 +13,16 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include:
+          - health
+          - heartbeat
       base-path: /monitoring
   endpoint:
     health:
       show-details: "ALWAYS"
+    heartbeat:
+      enabled: true
+      cache:
+        time-to-live: 10s
 
 
