--- a/siva-parent/siva-webapp/src/main/resources/application.yml
+++ b/siva-parent/siva-webapp/src/main/resources/application.yml
@@ -16,6 +16,7 @@ management:
         include:
           - health
           - heartbeat
+          - version
       base-path: /monitoring
   endpoint:
     health:
@@ -24,5 +25,7 @@ management:
       enabled: true
       cache:
         time-to-live: 10s
+    version:
+      enabled: true
 
 
