SIVA-287 Use DSS version 5.8.d4j.1 and DD4J version 4.3.0-SNAPSHOT; fix some compatibility issues

--- a/validation-services-parent/validation-commons/pom.xml
+++ b/validation-services-parent/validation-commons/pom.xml
@@ -88,7 +88,7 @@
         </dependency>
         <dependency>
             <groupId>org.digidoc4j.dss</groupId>
-            <artifactId>dss-service</artifactId>
+            <artifactId>dss-asic-common</artifactId>
         </dependency>
     </dependencies>
 
