DD4J-737 prioritize maven central as repository

--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -335,6 +335,10 @@
 
     <repositories>
         <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
             <id>jboss-public</id>
             <url>https://repository.jboss.org/nexus/</url>
         </repository>
@@ -374,6 +378,10 @@
     </repositories>
 
     <pluginRepositories>
+        <pluginRepository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </pluginRepository>
         <pluginRepository>
             <id>spring-snapshots</id>
             <url>http://repo.spring.io/snapshot</url>
