--- a/.github/workflows/siva-verify.yml
+++ b/.github/workflows/siva-verify.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-20.04 ]
-        java: [ 11, 13 ]
+        java: [ 11 ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
