--- a/pom.xml
+++ b/pom.xml
@@ -113,16 +113,11 @@
         <commons.collections.version>4.4</commons.collections.version>
         <commons.io.version>2.9.0</commons.io.version>
         <jackson.version>2.12.3</jackson.version>
-        <junit.jupiter.version>5.7.2</junit.jupiter.version>
-        <junit.platform.version>1.7.2</junit.platform.version>
-        <junit.version>4.13.2</junit.version>
         <json.version>20210307</json.version>
         <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.20</lombok.version>
-        <mockito.version>3.11.0</mockito.version>
-        <powermock.version>2.0.9</powermock.version>
         <snakeyaml.version>1.29</snakeyaml.version>
-        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
+        <spring.boot.version>2.6.2</spring.boot.version>
         <xmlsec.version>2.1.6</xmlsec.version>
 
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
